fix color on mobile devices

--- a/static/website/css/responsive.css
+++ b/static/website/css/responsive.css
@@ -77,9 +77,9 @@ h6 {font-size: 17px; line-height: 26px;}
 .navbar-nav .nav-link{padding: 10px !important; border-radius: .25rem; color: #ffffff;}
 
 .navbar-nav .nav-link:hover, .navbar-nav .nav-item .nav-link.active,
-.navbar-nav .nav-item.show .nav-link{background: rgba(49,67,239,0.1) !important;}
+.navbar-nav .nav-item.show .nav-link{background: #404040 !important;}
 
-.navbar-collapse {border-radius: .25rem; background:#0d092c; max-height: 400px;  left: 0; padding: 10px; position: absolute; z-index: 99; top: 50px; width: 100%; overflow: auto; border: medium none; -webkit-box-shadow: 7px 5px 30px rgba(72,73,121,0.15); -moz-box-shadow: 7px 5px 30px rgba(72,73,121,0.15); box-shadow: 7px 5px 30px rgba(72,73,121,0.15);}
+.navbar-collapse {border-radius: .25rem; background:#404040; max-height: 400px;  left: 0; padding: 10px; position: absolute; z-index: 99; top: 50px; width: 100%; overflow: auto; border: medium none; -webkit-box-shadow: 7px 5px 30px #404040; -moz-box-shadow: 7px 5px 30px #404040; box-shadow: 7px 5px 30px #404040;}
 .navbar-toggler span {width: 80%; height: 2px; margin: 5px auto; display: block; background: #ffffff;}
 .navbar-nav .dropdown-toggle::after{background: none !important; position: absolute; border:none; top: 50%; right: 0; margin: -0.5em 0.5em 0 0; border-radius: .25rem; padding: 0; width: 2em; height: 1.4em; font-size: 1.25rem; line-height: 1.2em; text-align: center;}
 .navbar-nav .dropdown-toggle::after {content: '+';}
@@ -93,7 +93,7 @@ h6 {font-size: 17px; line-height: 26px;}
 
 .header-3 .navbar{padding: 15px;}
 
-.md-text-black{color: #081b3a !important;}
+.md-text-black{color: #404040 !important;}
 
 /*Banner*/
 .page-title {padding: 160px 0;}
