--- a/static/website/css/shortcodes.css
+++ b/static/website/css/shortcodes.css
@@ -190,7 +190,7 @@
 .team-member.style-2 .team-description{box-shadow: none; padding: 30px; }
 
 .team-member.style-2 .team-images:before {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: -webkit-linear-gradient(top, rgba(49,67,23,0) 0%, rgba(49,67,23,0.9) 55%);
-background: linear-gradient(to bottom, rgba(49,67,239,0) 0%, rgba(49,67,239,0.9) 55%); content: ''; opacity: 0; -webkit-transform: translate3d(0,30%,0); transform: translate3d(0,30%,0);}
+background: linear-gradient(to bottom, rgba(49,67,239,0) 0%, #404040 55%); content: ''; opacity: 0; -webkit-transform: translate3d(0,30%,0); transform: translate3d(0,30%,0);}
 .team-member.style-2 .team-images:before,
 .team-member.style-2 .team-social-icon {-webkit-transition: opacity 0.35s, -webkit-transform 0.35s; transition: opacity 0.35s, transform 0.35s;}
 .team-member.style-2:hover .team-images:before {opacity: 1; -webkit-transform: translate3d(0,0,0); transform: translate3d(0,0,0);}
